# upcake

./: .gitignore  .rustfmt.toml  Cargo.toml  LICENSE  README.md
.cargo-husky/hooks/: pre-commit
.github/workflows/: build.yaml  rust.yaml
examples/: basic.yaml  client-key.pem  client.pem  data.hbs  dependencies.yaml  docker-compose.yaml  mtls.yaml  pipeline.yaml
examples/caddy/: Caddyfile  ca.pem  cert.pem  key.pem
src/: assertions.rs  lib.rs  main.rs  observer.rs  reporters.rs
src/observer/: mod.rs  noop.rs  write.rs
