[package]
name = "upcake"
version = "0.1.0"
authors = ["Tyrone Tudehope <tyronetudehope@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
futures = "0.3"
handlebars = "4.1"
httpstat = { git = "https://github.com/johnnynotsolucky/rust-httpstat", default-features = false }
jql = "2.9"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
structopt = "0.3"
thiserror = "1.0"
toml = "0.5"
url = "2.2"

[features]
default = ["ssl", "http2"]
ssl = ["httpstat/ssl"]
http2 = ["httpstat/http2"]
static-ssl = ["httpstat/static-ssl"]
static-curl = ["httpstat/static-curl"]
