[package]
name = "upcake"
version = "0.1.4"
authors = ["Tyrone Tudehope <tyronetudehope@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Fast, easy and consistent testing for HTTP APIs"
repository = "https://github.com/johnnynotsolucky/upcake"
readme = "README.md"

[dependencies]
anyhow = "1.0"
futures = "0.3"
handlebars = "4.1"
rust-httpstat = { version = "0.1", default-features = false }
jql = "2.9"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1.0"
structopt = "0.3"
thiserror = "1.0"
toml = "0.5"
url = "2.2"

[features]
default = ["ssl", "http2"]
ssl = ["rust-httpstat/ssl"]
http2 = ["rust-httpstat/http2"]
static-ssl = ["rust-httpstat/static-ssl"]
static-curl = ["rust-httpstat/static-curl"]
